--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "glob": "^11.0.1",
+    "postcss-pxtorem": "^6.1.0",
     "sass": "^1.85.0",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
